--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "lucide-react": "^0.564.0",
     "motion": "^12.34.2",
     "next": "16.1.6",
+    "nodemailer": "^8.0.1",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "tailwind-merge": "^3.4.1",
     "three": "^0.167.1"
   },
